# PlotSpec

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  workspace.toml
components/plot_spec/: __init__.py  api.py  dev.py  models.py  query_engine.py  service.py  specs.py
documentation/: Development practices.md  Idea.md  project-proposition.md
documentation/version_notes/: 0.1.0.md
projects/sales_overview/: dashboard.json
projects/sales_overview/data/: sales.csv
tests/: test_api.py  test_dashboard_service.py  test_dashboard_spec.py  test_repository_contract.py
