[project]
name = "plotspec"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "duckdb",
    "fastapi",
    "plotly",
    "uvicorn",
]

[project.scripts]
plotspec-dev = "plot_spec.dev:main"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "polylith-cli>=1.48.1",
    "pytest>=9.1.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
dev-mode-dirs = ["components", "bases", "development", "."]

[tool.hatch.build.targets.wheel]
packages = ["components/plot_spec"]

[tool.pytest.ini_options]
addopts = "-ra"
python_files = ["test_*.py", "*_test.py"]
